@@ -1,5 +1,5 @@
 VERSION_MAJOR=1
-VERSION_MINOR=11
+VERSION_MINOR=12pre1
 VERSION=$(VERSION_MAJOR).$(VERSION_MINOR)
 FILES=mailgraph.cgi mailgraph-init README COPYING CHANGES
 D=mailgraph-$(VERSION)
