@@ -6,8 +6,14 @@
 
 use RRDs;
 use POSIX qw(uname);
+use Fcntl qw(:flock);
 
-my $VERSION = "1.11";
+	print "\n";
+	print $RRDs::VERSION;
+exit;
+	
+
+my $VERSION = "1.12pre1";
 
 my $host = (POSIX::uname())[1];
 my $scriptname = 'mailgraph.cgi';
@@ -18,7 +24,6 @@ my $ypoints_err = 96;
 my $rrd = 'mailgraph.rrd'; # path to where the RRD database is
 my $rrd_virus = 'mailgraph_virus.rrd'; # path to where the Virus RRD database is
 my $tmp_dir = '/tmp/mailgraph'; # temporary directory where to store the images
-my $rrdtool_1_0 = ($RRDs::VERSION < 1.199908);
 
 my @graphs = (
 	{ title => 'Day Graphs',   seconds => 3600*24,        },
@@ -36,16 +41,18 @@ my %color = (
 	spam     => '999999',
 );
 
-sub graph($$$)
+sub rrd_graph(@)
 {
-	my $range = shift;
-	my $file = shift;
-	my $title = shift;
+	my ($range, $file, $ypoints, @rrdargs) = @_;
 	my $step = $range*$points_per_sample/$xpoints;
 	# choose carefully the end otherwise rrd will maybe pick the wrong RRA:
 	my $end  = time; $end -= $end % $step;
 	my $date = localtime(time);
-	$date =~ s|:|\\:|g unless $rrdtool_1_0;
+	$date =~ s|:|\\:|g unless $RRDs::VERSION < 1.199908;
+
+	# lock for writing
+	open(LOCK, ">", "$file.lock") or die "ERROR: can't write lockfile: $file.lock\n";
+	flock(LOCK, LOCK_EX);
 
 	my ($graphret,$xs,$ys) = RRDs::graph($file,
 		'--imgformat', 'PNG',
@@ -61,10 +68,27 @@ sub graph($$$)
 		'--color', 'SHADEB#ffffff',
 		'--color', 'BACK#ffffff',
 
-		$rrdtool_1_0 ? () : (
+		$RRDs::VERSION < 1.2002 ? () : (
 			'--slope-mode'
 		),
 
+		@rrdargs,
+
+		'COMMENT:['.$date.']\r',
+	);
+
+	my $ERR=RRDs::error;
+	die "ERROR: $ERR\n" if $ERR;
+
+	# unlock
+	close(LOCK);
+}
+
+sub graph($$)
+{
+	my ($range, $file) = @_;
+	my $step = $range*$points_per_sample/$xpoints;
+	rrd_graph($range, $file, $ypoints,
 		"DEF:sent=$rrd:sent:AVERAGE",
 		"DEF:msent=$rrd:sent:MAX",
 		"CDEF:rsent=sent,60,*",
@@ -86,42 +110,14 @@ sub graph($$$)
 		'GPRINT:srecv:MAX:total\: %8.0lf msgs',
 		'GPRINT:rrecv:AVERAGE:avg\: %5.2lf msgs/min',
 		'GPRINT:rmrecv:MAX:max\: %4.0lf msgs/min\l',
-
-		'COMMENT:['.$date.']\r',
 	);
-	my $ERR=RRDs::error;
-	die "ERROR: $ERR\n" if $ERR;
 }
 
-sub graph_err($$$)
+sub graph_err($$)
 {
-	my $range = shift;
-	my $file = shift;
-	my $title = shift;
+	my ($range, $file) = @_;
 	my $step = $range*$points_per_sample/$xpoints;
-	# choose carefully the end otherwise rrd will maybe pick the wrong RRA:
-	my $end  = time; $end -= $end % $step;
-	my $date = localtime(time);
-	$date =~ s|:|\\:|g unless $rrdtool_1_0;
-
-	my ($graphret,$xs,$ys) = RRDs::graph($file,
-		'--imgformat', 'PNG',
-		'--width', $xpoints,
-		'--height', $ypoints_err,
-		'--start', "-$range",
-		'--end', $end,
-		'--vertical-label', 'msgs/min',
-		'--lower-limit', 0,
-		'--units-exponent', 0, # don't show milli-messages/s
-		'--lazy',
-		'--color', 'SHADEA#ffffff',
-		'--color', 'SHADEB#ffffff',
-		'--color', 'BACK#ffffff',
-
-		$rrdtool_1_0 ? () : (
-			'--slope-mode',
-		),
-
+	rrd_graph($range, $file, $ypoints_err,
 		"DEF:rejected=$rrd:rejected:AVERAGE",
 		"DEF:mrejected=$rrd:rejected:MAX",
 		"CDEF:rrejected=rejected,60,*",
@@ -165,11 +161,7 @@ sub graph_err($$$)
 		'GPRINT:sspam:MAX:total\: %8.0lf msgs',
 		'GPRINT:rspam:AVERAGE:avg\: %5.2lf msgs/min',
 		'GPRINT:rmspam:MAX:max\: %4.0lf msgs/min\l',
-
-		'COMMENT:['.$date.']\r',
 	);
-	my $ERR=RRDs::error;
-	die "ERROR: $ERR\n" if $ERR;
 }
 
 sub print_html()
@@ -210,7 +202,12 @@ FOOTER
 
 sub send_image($)
 {
-	my $file = shift;
+	my ($file)= @_;
+
+	# lock for reading
+	open(LOCK, ">", "$file.lock") or die "ERROR: can't write lockfile: $file.lock\n";
+	flock(LOCK, LOCK_SH);
+	
 	-r $file or do {
 		print "Content-type: text/plain\n\nERROR: can't find $file\n";
 		exit 1;
@@ -222,6 +219,9 @@ sub send_image($)
 	open(IMG, $file) or die;
 	my $data;
 	print $data while read IMG, $data, 1024;
+
+	# unlock
+	close(LOCK);
 }
 
 sub main()
@@ -237,12 +237,12 @@ sub main()
 	if(defined $img and $img =~ /\S/) {
 		if($img =~ /^(\d+)-n$/) {
 			my $file = "$tmp_dir/$uri/mailgraph_$1.png";
-			graph($graphs[$1]{seconds}, $file, $graphs[$1]{title});
+			graph($graphs[$1]{seconds}, $file);
 			send_image($file);
 		}
 		elsif($img =~ /^(\d+)-e$/) {
 			my $file = "$tmp_dir/$uri/mailgraph_$1_err.png";
-			graph_err($graphs[$1]{seconds}, $file, $graphs[$1]{title});
+			graph_err($graphs[$1]{seconds}, $file);
 			send_image($file);
 		}
 		else {
