@@ -1,3 +1,9 @@
+2005-09-12
+----------
+* bugfix race condition in mailgraph.cgi (Ralf Hildebrandt)
+* sendmail fixes (Ben Lentz, R. Scott Baer)
+* compatibility with rrdtool 1.2.0 and 1.2.1 (no --slope-mode)
+
 2005-08-15
 ----------
 * add support for newer Vexira versions (Alexandru Suchici)
